--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,39 +1,11 @@
 pipeline {
     agent none
       environment {
-        registry = "davout123/pi"
+        registry = "davout123/py"
         registryCredential = "docker_creds"
         dockerImage = ''
       }
     stages {
-        stage('Maven'){
-            agent {
-                docker {
-                    image 'maven:3-alpine'
-                    args '-v /root/.m2:/root/.m2'
-                }
-            }
-        stages {
-                stage('Test') {
-                     steps {
-                         sh 'mvn test'
-                     }
-                 }
-                 stage('Build') {
-                     steps {
-                         sh 'mvn -B -DskipTests clean package'
-                     }
-                 }
-                 stage('Czy dziala') {
-                     steps {
-                        script {
-                            echo 'Deploying....'
-                        }
-                     }
-                 }
-            }
-        }
-
          stage('Deploy') {
             agent any
              steps {
