--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -34,7 +34,7 @@ pipeline {
             agent any
             steps {
                 sshagent(['pi_key']) {
-                    sh 'ssh -o StrictHostKeyChecking=no pi@192.168.1.12 "./deploy.sh"'
+                    sh 'ssh -o StrictHostKeyChecking=no pi@192.168.1.12 "bash -x deploy.sh"'
                 }
             }
         }
