--- a/mpd.conf
+++ b/mpd.conf
@@ -231,17 +231,17 @@ input {
 #
 # An example of a shout output (for streaming to Icecast):
 #
-audio_output {
-  type    "shout"
-  encoding  "mp3"     # optional
-  name    "Docker MPD Radio"
-  host    "icecast"
-  port    "8001"
-  mount   "/mpd"
-  password  "hackme"
+#audio_output {
+#  type    "shout"
+#  encoding  "mp3"     # optional
+#  name    "Docker MPD Radio"
+#  host    "icecast"
+#  port    "8001"
+#  mount   "/mpd"
+#  password  "hackme"
 # quality   "5.0"
-  bitrate   "128"
-  format    "44100:16:2"
+# bitrate   "128"
+#  format    "44100:16:2"
 # protocol  "icecast2"    # optional
 # user    "source"    # optional
 # description "My Stream Description" # optional
@@ -249,8 +249,8 @@ audio_output {
 # genre   "jazz"      # optional
 # public    "no"      # optional
 # timeout   "2"     # optional
-  mixer_type      "software"              # optional
-}
+#  mixer_type      "software"              # optional
+#}
 #
 # An example of a recorder output:
 #
