--- a/mpd.conf
+++ b/mpd.conf
@@ -80,7 +80,7 @@ user				"mpd"
 # to have mpd listen on every address
 #
 # For network
-#bind_to_address		"localhost"
+bind_to_address		"any"
 #
 # And for Unix Socket
 #bind_to_address		"/run/mpd/socket"
@@ -88,7 +88,7 @@ user				"mpd"
 # This setting is the TCP port that is desired for the daemon to get assigned
 # to.
 #
-port				"6601"
+#port				"6601"
 #
 # This setting controls the type of information which is logged. Available 
 # setting arguments are "default", "secure" or "verbose". The "verbose" setting
